# cmkl-med-hackathon

./: .gitignore  README.md  development.ipynb  embeddings_bge_m3.npy  log.txt  main.py  pyproject.toml
data/: doc.md  doc2.md  doc2_csv.csv  doc3.md  doc3_csv.csv  doc_csv.csv
